[package]
name = "voy-search"
version = "0.6.3"
authors = ["Daw-Chih Liou <dawochih.liou@gmail.com>"]
edition = "2018"
description = "a vector similarity search engine in WASM"
documentation = "https://github.com/tantaraio/voy#readme"
readme = "https://github.com/tantaraio/voy#readme"
homepage = "https://github.com/tantaraio/voy"
repository = "https://github.com/tantaraio/voy"
license = "MIT OR Apache 2.0"
keywords = ["webassembly", "wasm", "rust", "kd-tree", "embeddings", "vector search", "similarity search", "nearest neighbor"]


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
serde = { version = "1.0.152", features = ["derive"] }
anyhow = "1.0.69"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0.93"
serde-wasm-bindgen = "0.4.5"
js-sys = "0.3.61"
tsify = "0.4.5"
kiddo = { version = "2.1.0", features = ["serialize"] }

[dev-dependencies]
rstest = "0.17.0"
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
